# servicenow-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  SKILL.md  package-lock.json  pyproject.toml
.claude/skills/: servicenow-configure.md
config/: schema_export.yaml  sn_domains.yaml  tool_packages.yaml
docs/: SN_FNT_Implementation_Handbook_v1.0.docx  cmdb_ci_business_rules.md  cmdb_ci_business_rules_analysis.html  prompt_sn_certification_plan.md  prompt_sn_training_plan.md
raw_research/: browseruse_ACL.md  browseruse_AgentWS.md  browseruse_Approvals.md  browseruse_Assignment.md  browseruse_CMDB_v2.md  browseruse_CSDM.md  browseruse_ClientScripts.md  browseruse_CustomizationArchitectureGuidelines.md  browseruse_CustomizationBestPractices.md  browseruse_Events.md  browseruse_Flow.md  browseruse_GlideRecord.md  browseruse_ImportSets.md  browseruse_KM_v2.md  browseruse_Notifications.md  browseruse_PerfAnalytics.md  browseruse_RESTAPI.md  browseruse_SLA.md  browseruse_ScheduledJobs.md  browseruse_ScriptInclude.md  browseruse_ServicePortal.md  browseruse_TableHierarchy.md  browseruse_UpdateSets.md  webfetch_business_rules.md  webfetch_change_management.md  webfetch_incident_management.md  webfetch_problem_management.md  webfetch_service_catalog.md
schulungen/: 01_incident_management.md  02_change_management.md  03_problem_management.md  04_service_catalog.md  05_knowledge_management.md  06_cmdb_configuration_management.md  07_sla_management.md  08_business_rules.md  09_flow_designer.md  10_client_scripts_ui_policies.md  11_script_includes.md  12_rest_api.md  13_scheduled_jobs.md  14_acl_security.md  15_table_hierarchy.md  16_notifications.md  17_update_sets_scoping.md  18_import_sets_transform_maps.md  19_events_system.md  20_assignment_rules.md  21_agent_workspace.md  22_service_portal.md  23_performance_analytics_reporting.md  24_glide_record_api.md  25_approval_engine.md  26_customization_best_practices.md  27_customization_architecture_guidelines.md
scripts/: build_sn_graph.py  export_sn_schema.py  extract_sn_entities.py  import_sn_schema.py  index_sn_docs.py
src/servicenow_mcp/: __init__.py  __main__.py  api.py  config.py  http_server.py  knowledge_mcp.py  knowledge_server.py  server.py
src/servicenow_mcp/knowledge/: __init__.py  config.py  knowledge_mcp.py
src/servicenow_mcp/tools/: __init__.py  _serialize.py  ask.py  business_rule_tools.py  change_tools.py  graph.py  import_set_tools.py  knowledge_base.py  lookup.py  oauth_tools.py  rest_message_tools.py  scheduled_job_tools.py  search.py  sys_dictionary_tools.py  table_api_tools.py
src/servicenow_mcp/utils/: knowledge_config.py  tool_utils.py
systemd/: servicenow-mcp.service
tests/: conftest.py  test_business_rule_tools.py  test_oauth_tools.py  test_rest_message_tools.py  test_scheduled_job_tools.py  test_server_catalog.py  test_server_workflow.py  test_sys_dictionary_tools.py  test_table_api_tools.py  test_workflow_tools.py
tests/integration/: conftest.py  test_graph_smoke.py
tests/unit/: test_ask.py  test_graph.py  test_lookup.py  test_search.py  test_serialize.py
