[project]
name = "servicenow-mcp"
version = "0.5.0"
description = "MCP server for ServiceNow knowledge (platform + ITIL/ITSM + consulting) — RAG over Qdrant+Neo4j+vLLM"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "klapom" }]

dependencies = [
    # Shared runtime (logging, metrics, dual-surface HTTP, stdio, BaseServiceSettings)
    "mcp-toolkit-py @ git+https://github.com/klapom/mcp-toolkit-py@v0.1.0",
    # MCP SDK (FastMCP) — kept explicit for IDE/type resolution even though toolkit requires it
    "mcp[cli]>=1.3.0",
    # RAG backends (legacy ServiceNowKnowledgeMCP: Qdrant dense + Neo4j graph + vLLM via OpenAI-compat + Redis cache)
    "qdrant-client>=1.10.0,<1.12.0",
    "neo4j>=5.0.0",
    "openai>=1.0.0",
    "redis>=5.0.0",
]

[project.scripts]
servicenow-mcp = "servicenow_mcp.__main__:main_stdio"
servicenow-mcp-http = "servicenow_mcp.http_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.22.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/servicenow_mcp"]

# ─── ruff ────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/servicenow_mcp/knowledge/**"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # line-too-long handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # assert False patterns ok in tests
# Legacy 818-LOC ServiceNowKnowledgeMCP class: copied from pre-migration state, not touched.
"src/servicenow_mcp/knowledge/**" = ["UP", "SIM", "RUF", "F541", "I001", "N", "B", "E"]

# ─── mypy ────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Legacy 818-LOC class (copied pre-migration) has strict-typing violations; we don't touch it.
[[tool.mypy.overrides]]
module = ["servicenow_mcp.knowledge.*"]
ignore_errors = true

# ─── pytest ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--cov=servicenow_mcp.tools",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.coverage.run]
branch = true
source = ["src/servicenow_mcp/tools"]
omit = [
    "src/servicenow_mcp/__main__.py",
    "src/servicenow_mcp/http_server.py",
    "src/servicenow_mcp/server.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
